Signed-off-by: amen <amen@localhost.localdomain>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ ADD_DEFINITIONS(-std=c++11)
 aux_source_directory(src SRC)
 aux_source_directory(src/tools TOOLS)
 aux_source_directory(src/HTTP HTTP)
-set(SRC_ALL ${SRC} ${TOOLS} ${HTTP})
+aux_source_directory(src/Pages PAGES)
+set(SRC_ALL ${SRC} ${TOOLS} ${HTTP} ${PAGES})
 add_executable(cwebserver ${SRC_ALL} src/main.cpp )
 target_link_libraries(cwebserver boost_regex json-c pthread)
 #install(TARGETS cwebserver RUNTIME DESTINATION bin)
