Signed-off-by: amen <amen@localhost.localdomain>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ aux_source_directory(src/HTTP HTTP)
 aux_source_directory(src/Pages PAGES)
 set(SRC_ALL ${SRC} ${TOOLS} ${HTTP} ${PAGES})
 add_executable(cwebserver ${SRC_ALL} src/main.cpp )
-target_link_libraries(cwebserver boost_regex json-c pthread)
+target_link_libraries(cwebserver boost_regex json-c pthread msgpack)
 #install(TARGETS cwebserver RUNTIME DESTINATION bin)
