Signed-off-by: amen <amen@localhost.localdomain>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ aux_source_directory(src/tools TOOLS)
 aux_source_directory(src/HTTP HTTP)
 aux_source_directory(src/Pages PAGES)
 set(SRC_ALL ${SRC} ${TOOLS} ${HTTP} ${PAGES})
-add_executable(cwebserver ${SRC_ALL} src/main.cpp )
+add_executable(cwebserver ${SRC_ALL} server/main.cpp )
+add_executable(clienttest ${SRC_ALL} test/websocket_clienttest.cpp )
 target_link_libraries(cwebserver boost_regex json-c pthread msgpack)
+target_link_libraries(clienttest boost_regex json-c pthread msgpack ssl crypto)
 #install(TARGETS cwebserver RUNTIME DESTINATION bin)
