--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ set(SRC_ALL ${SRC} ${TOOLS} ${HTTP} ${PAGES})
 add_executable(cwebserver ${SRC_ALL} server/main.cpp )
 add_executable(clienttest ${SRC_ALL} test/websocket_clienttest.cpp )
 target_link_libraries(cwebserver boost_regex json-c pthread msgpack)
-target_link_libraries(clienttest boost_regex json-c pthread msgpack ssl crypto)
+target_link_libraries(clienttest boost_regex json-c pthread msgpack ssl crypto pthread)
 #install(TARGETS cwebserver RUNTIME DESTINATION bin)
